force-app/main/default/objects/Account/fields/Account_Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Name__c</fullName>
    <label>Account Billing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>