force-app/main/default/objects/Account/fields/Account_Name_From_Monday__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_From_Monday__c</fullName>
    <description>For Data Migration use</description>
    <label>Account Name From Monday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>