force-app/main/default/objects/Account/fields/ID_of_Account__c.field-meta.xml
<CustomField>
    <fullName>ID_of_Account__c</fullName>
    <description>This is for data migration</description>
    <label>ID of Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>