force-app/main/default/objects/Account/fields/Maximum_deal_amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_deal_amount__c</fullName>
    <label>Maximum deal amount</label>
    <summarizedField>Opportunity.Aggregate_Calculated_Total_Price__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>