force-app/main/default/objects/Account/fields/Minimum_deal_amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_deal_amount__c</fullName>
    <label>Minimum deal amount</label>
    <summarizedField>Opportunity.Aggregate_Calculated_Total_Price__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>