force-app/main/default/objects/Account/fields/Total_amount_of_occasional_opp__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_of_occasional_opp__c</fullName>
    <label>Total amount of On Demand</label>
    <summarizedField>Opportunity.Aggregate_Calculated_Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>On demand Opportunity, Series Opportunity</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>