force-app/main/default/objects/Account/fields/Total_amount_of_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_of_opportunities__c</fullName>
    <label>Total amount of opportunities</label>
    <summarizedField>Opportunity.Aggregate_Calculated_Total_Price__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>