force-app/main/default/objects/Account/fields/Total_amount_of_standard_opp__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_of_standard_opp__c</fullName>
    <label>Total amount of standard opp</label>
    <summarizedField>Opportunity.Aggregate_Calculated_Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Standard Opportunity</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>