force-app/main/default/objects/Account/listViews/Broker_Accounts.listView-meta.xml
<ListView>
    <fullName>Broker_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Broker</value>
    </filters>
    <label>Broker Accounts</label>
</ListView>