force-app/main/default/objects/Account/listViews/Rooms_Account.listView-meta.xml
<ListView>
    <fullName>Rooms_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Rooms Internal</value>
    </filters>
    <label>Rooms Account</label>
</ListView>